objects/SpecialObj__c.object
<CustomObject>
    <description>Special info 📞 📞 

added 📞 📞   in  added 📞 📞   


📞 📞 in added 📞 📞

info 📞</description>
    <fields>
        <fullName>field12__c</fullName>
        <description>📞 📞  ee</description>
        <inlineHelpText>field12 📞 📞  ee</inlineHelpText>
        <label>field12</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <description>📞  📞 📞  ee</description>
        <inlineHelpText>📞📞 📞  ee</inlineHelpText>
        <label>field1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <description>in 📞 📞 info
 📞 📞</description>
        <inlineHelpText>📞 📞</inlineHelpText>
        <label>field3</label>
        <type>TextArea</type>
    </fields>
    <label>SpecialObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SpecialObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SpecialObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>